ClaimFlow/force-app/main/default/objects/Claim_Type_Config__mdt/Claim_Type_Config__mdt.object-meta.xml
<CustomObject>
    <label>Claim Type Config</label>
    <pluralLabel>Claim Type Configs</pluralLabel>
</CustomObject>