ClaimFlow/force-app/main/default/objects/Claim_Type_Config__mdt/fields/Assigned_Team__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Team__c</fullName>
    <label>Assigned Team</label>
    <type>Text</type>
    <length>120</length>
    <required>true</required>
</CustomField>