ClaimFlow/force-app/main/default/objects/Claim_Type_Config__mdt/fields/Claim_Type__c.field-meta.xml
<CustomField>
    <fullName>Claim_Type__c</fullName>
    <label>Claim Type</label>
    <type>Text</type>
    <length>40</length>
    <required>true</required>
</CustomField>