ClaimFlow/force-app/main/default/objects/Claim_Type_Config__mdt/fields/Reserve_Factor__c.field-meta.xml
<CustomField>
    <fullName>Reserve_Factor__c</fullName>
    <label>Reserve Factor</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>2</scale>
    <required>true</required>
    <description>Fraction of the claimed amount held in reserve for this claim type.</description>
</CustomField>